--- a/package.json
+++ b/package.json
@@ -2,29 +2,42 @@
 	"name": "mixgolem-server",
 	"version": "1.0.0",
 	"description": "mixgolem-server",
-	"main": "src/index.js",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon index.js"
+		"start:dev": "nodemon --exec babel-node index.js",
+		"start:dist": "webpack --mode production & node ./dist/main.js",
+		"start": "node main.js",
+		"build": "webpack"
 	},
 	"author": "Mangesh Ghadigaonkar",
 	"license": "ISC",
 	"devDependencies": {
-		"nodemon": "^2.0.4"
+		"@babel/core": "^7.24.9",
+		"@babel/node": "^7.24.8",
+		"@babel/preset-env": "^7.24.8",
+		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"class-validator": "^0.14.1",
 		"connect-session-sequelize": "^7.0.1",
+		"cors": "^2.8.5",
 		"csurf": "^1.11.0",
-		"dotenv": "^8.2.0",
+		"dotenv": "^8.6.0",
 		"express": "^4.17.1",
 		"express-flash": "0.0.2",
 		"express-handlebars": "^5.1.0",
-		"express-session": "^1.17.1",
+		"express-session": "^1.18.0",
+		"http-status-codes": "^2.3.0",
 		"mysql2": "^2.1.0",
 		"sequelize": "^6.3.4",
 		"validator": "^13.1.1"
+	},
+	"babel": {
+		"presets": [
+			"@babel/env"
+		]
 	}
 }
