--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"class-validator": "^0.14.1",
@@ -31,7 +32,9 @@
 		"express-handlebars": "^5.1.0",
 		"express-session": "^1.18.0",
 		"http-status-codes": "^2.3.0",
+		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^2.1.0",
+		"nodemailer": "^6.9.14",
 		"sequelize": "^6.3.4",
 		"validator": "^13.1.1"
 	},
