--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"express-handlebars": "^5.1.0",
 		"express-session": "^1.18.0",
 		"http-status-codes": "^2.3.0",
+		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^2.1.0",
 		"sequelize": "^6.3.4",
 		"validator": "^13.1.1"
