--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
 		"express-session": "^1.18.0",
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^2.1.0",
 		"nodemailer": "^6.9.14",
+		"request": "^2.88.2",
+		"request-promise": "^4.2.6",
 		"sequelize": "^6.3.4",
 		"validator": "^13.1.1"
 	},
