--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.1672.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"class-validator": "^0.14.1",
@@ -31,7 +32,11 @@
 		"express-handlebars": "^5.1.0",
 		"express-session": "^1.18.0",
 		"http-status-codes": "^2.3.0",
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^2.10.0",
 		"mysql2": "^2.1.0",
+		"path": "^0.12.7",
 		"sequelize": "^6.3.4",
 		"validator": "^13.1.1"
 	},
