--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
 		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
-		"bcrypt": "^5.1.1",
 		"aws-sdk": "^2.1672.0",
+		"axios": "^1.7.4",
+		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"class-validator": "^0.14.1",
@@ -35,12 +36,12 @@
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^2.10.0",
 		"mysql2": "^2.1.0",
 		"nodemailer": "^6.9.14",
+		"path": "^0.12.7",
 		"request": "^2.88.2",
 		"request-promise": "^4.2.6",
-		"multer-s3": "^2.10.0",
-		"path": "^0.12.7",
 		"sequelize": "^6.3.4",
 		"validator": "^13.1.1"
 	},
