--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"multer-s3": "^2.10.0",
 		"mysql2": "^2.1.0",
 		"nodemailer": "^6.9.14",
+		"passport-google-oauth20": "^2.0.0",
 		"path": "^0.12.7",
 		"request": "^2.88.2",
 		"request-promise": "^4.2.6",
