--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start:dev": "nodemon --exec babel-node index.js",
 		"start:dist": "webpack --mode production & node ./dist/main.js",
-		"start": "nodemon --exec babel-node index.js",
-		"build": "webpack"
+		"start": "nodemon --exec babel-node index.js"
 	},
 	"author": "Mangesh Ghadigaonkar",
 	"license": "ISC",
