--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,10 +62,10 @@ jobs:
           username: ubuntu
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
-          script: |
-            docker rmi $(docker images -q)
-            docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
-            docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
-            docker stop ${{ secrets.PROJECT_NAME }}
-            docker rm ${{ secrets.PROJECT_NAME }}
-            docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 ${{ secrets.PROJECT_NAME }}
+        script: |
+          sudo docker rmi $(sudo docker images -q)
+          sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+          sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
+          sudo docker stop ${{ secrets.PROJECT_NAME }}
+          sudo docker rm ${{ secrets.PROJECT_NAME }}
+          sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 ${{ secrets.PROJECT_NAME }}
