--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,20 +40,20 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker build
-        run: |
-          docker build \
-            --build-arg S3_KEYID="${{secrets.S3_KEYID}}" \
-            --build-arg S3_PRIVATE_KEY="${{secrets.S3_PRIVATE_KEY}}" \
-            --build-arg REGION="${{secrets.REGION}}" \
-            --build-arg BUCKET_NAME="${{secrets.BUCKET_NAME}}" \
-            --build-arg DB_HOST="${{secrets.DB_HOST}}" \
-            --build-arg DB_USER="${{secrets.DB_USER}}" \
-            --build-arg DB_PORT="${{secrets.DB_PORT}}" \
-            --build-arg DB_PASSWORD="${{secrets.DB_PASSWORD}}" \
-            -t ${{ secrets.PROJECT_NAME }} .
+      run: |
+        docker build \
+          --build-arg S3_KEYID="${{secrets.S3_KEYID}}" \
+          --build-arg S3_PRIVATE_KEY="${{secrets.S3_PRIVATE_KEY}}" \
+          --build-arg REGION="${{secrets.REGION}}" \
+          --build-arg BUCKET_NAME="${{secrets.BUCKET_NAME}}" \
+          --build-arg DB_HOST="${{secrets.DB_HOST}}" \
+          --build-arg DB_USER="${{secrets.DB_USER}}" \
+          --build-arg DB_PORT="${{secrets.DB_PORT}}" \
+          --build-arg DB_PASSWORD="${{secrets.DB_PASSWORD}}" \
+          -t ${{ secrets.PROJECT_NAME }} .
 
-          docker tag ${{ secrets.PROJECT_NAME }} ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
-          docker push ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+        docker tag ${{ secrets.PROJECT_NAME }} ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+        docker push ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
 
       - name: Deploy
         uses: appleboy/ssh-action@master
@@ -62,10 +62,10 @@ jobs:
           username: ubuntu
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
-        script: |
-          sudo docker rmi $(sudo docker images -q)
-          sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
-          sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
-          sudo docker stop ${{ secrets.PROJECT_NAME }}
-          sudo docker rm ${{ secrets.PROJECT_NAME }}
-          sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 ${{ secrets.PROJECT_NAME }}
+          script: |
+            sudo docker rmi $(docker images -q)
+            sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+            sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
+            sudo docker stop ${{ secrets.PROJECT_NAME }}
+            sudo docker rm ${{ secrets.PROJECT_NAME }}
+            sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 ${{ secrets.PROJECT_NAME }}
