--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,4 +68,13 @@ jobs:
             sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
             sudo docker stop ${{ secrets.PROJECT_NAME }}
             sudo docker rm ${{ secrets.PROJECT_NAME }}
-            sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 ${{ secrets.PROJECT_NAME }}
+            sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 \
+            -e S3_KEYID=${{ secrets.S3_KEYID }} \
+            -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
+            -e REGION=${{ secrets.REGION }} \
+            -e BUCKET_NAME=${{ secrets.BUCKET_NAME }} \
+            -e DB_HOST=${{ secrets.DB_HOST }} \
+            -e DB_USER=${{ secrets.DB_USER }} \
+            -e DB_PORT=${{ secrets.DB_PORT }} \
+            -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            ${{ secrets.PROJECT_NAME }}
