--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,6 +63,8 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
+            sudo docker stop mixgolem || true
+            sudo docker rm mixgolem || true
             sudo docker rmi $(docker images -q)
             sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
             sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
