--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,20 +63,32 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
+            # 1. EC2 인스턴스의 .bashrc에 환경변수 추가
+            echo "export S3_KEYID=${{ secrets.S3_KEYID }}" >> ~/.bashrc
+            echo "export S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }}" >> ~/.bashrc
+            echo "export REGION=${{ secrets.REGION }}" >> ~/.bashrc
+            echo "export BUCKET_NAME=${{ secrets.BUCKET_NAME }}" >> ~/.bashrc
+            echo "export DB_HOST=${{ secrets.DB_HOST }}" >> ~/.bashrc
+            echo "export DB_USER=${{ secrets.DB_USER }}" >> ~/.bashrc
+            echo "export DB_PORT=${{ secrets.DB_PORT }}" >> ~/.bashrc
+            echo "export DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> ~/.bashrc
+            
+            # 적용된 환경변수 재로드
+            source ~/.bashrc
+            
+            # 2. Docker 컨테이너 갱신 로직
             sudo docker stop mixgolem || true
             sudo docker rm mixgolem || true
-            sudo docker rmi $(docker images -q)
+            sudo docker rmi $(docker images -q) || true
             sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
             sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
-            sudo docker stop ${{ secrets.PROJECT_NAME }}
-            sudo docker rm ${{ secrets.PROJECT_NAME }}
             sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 \
-            -e S3_KEYID=${{ secrets.S3_KEYID }} \
-            -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
-            -e REGION=${{ secrets.REGION }} \
-            -e BUCKET_NAME=${{ secrets.BUCKET_NAME }} \
-            -e DB_HOST=${{ secrets.DB_HOST }} \
-            -e DB_USER=${{ secrets.DB_USER }} \
-            -e DB_PORT=${{ secrets.DB_PORT }} \
-            -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-            ${{ secrets.PROJECT_NAME }}
+              -e S3_KEYID=${{ secrets.S3_KEYID }} \
+              -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
+              -e REGION=${{ secrets.REGION }} \
+              -e BUCKET_NAME=${{ secrets.BUCKET_NAME }} \
+              -e DB_HOST=${{ secrets.DB_HOST }} \
+              -e DB_USER=${{ secrets.DB_USER }} \
+              -e DB_PORT=${{ secrets.DB_PORT }} \
+              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              ${{ secrets.PROJECT_NAME }}
