--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -50,14 +50,14 @@ jobs:
             --build-arg DB_USER="${{secrets.DB_USER}}" \
             --build-arg DB_PORT="${{secrets.DB_PORT}}" \
             --build-arg DB_PASSWORD="${{secrets.DB_PASSWORD}}" \
-            --buuld-arg EMAIL_USER="${{secrets.EMAIL_USER}}" \
-            --buuld-arg EMAIL_PASS="${{secrets.EMAIL_PASS}}" \
-            --buuld-arg USER_PASS_SALT="${{secrets.USER_PASS_SALT}}" \
-            --buuld-arg JWT_SECRET="${{secrets.JWT_SECRET}}" \
-            --buuld-arg KAKAO_REST_API_KEY="${{secrets.KAKAO_REST_API_KEY}}" \
-            --buuld-arg GOOGLE_CLIENT_ID="${{secrets.GOOGLE_CLIENT_ID}}" \
-            --buuld-arg GOOGLE_CLIENT_PASSWORD="${{secrets.GOOGLE_CLIENT_PASSWORD}}" \
-            --buuld-arg AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE="${{secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE}}" \
+            --build-arg EMAIL_USER="${{secrets.EMAIL_USER}}" \
+            --build-arg EMAIL_PASS="${{secrets.EMAIL_PASS}}" \
+            --build-arg USER_PASS_SALT="${{secrets.USER_PASS_SALT}}" \
+            --build-arg JWT_SECRET="${{secrets.JWT_SECRET}}" \
+            --build-arg KAKAO_REST_API_KEY="${{secrets.KAKAO_REST_API_KEY}}" \
+            --build-arg GOOGLE_CLIENT_ID="${{secrets.GOOGLE_CLIENT_ID}}" \
+            --build-arg GOOGLE_CLIENT_PASSWORD="${{secrets.GOOGLE_CLIENT_PASSWORD}}" \
+            --build-arg AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE="${{secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE}}" \
             -t ${{ secrets.PROJECT_NAME }} .
 
           docker tag ${{ secrets.PROJECT_NAME }} ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
