--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,6 @@
 name: CI/CD
 
 on:
-
   pull_request:
     types: [closed] # pull_request closed 됐을 경우
 
@@ -11,26 +10,17 @@ jobs:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     # pull_request가 dev 브랜치에 merge 됐을 경우
 
-    # node-version 과 같이 배열로 돼있으면, 해당 원소를 순회하면서 작업이 반복해서 실행된다.
-    # 응용해서 runs-on에 여러 OS에서 돌릴 수도 있다.
     strategy:
       matrix:
-        node-version: [20.x] 
+        node-version: [20.x]
 
-    # uses 개념은 다른 사람이 작성한 내용을 실행하는 개념이다.
-    # actions/checkout: GitHub의 마지막 커밋으로 Checkout 한다.
-    # actions/setup-node: Node.js를 설치한다.
-    # run 개념은 명령어를 실행한다. 셸 스크립트와 동일하다.
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      # npm ci는 npm install과 같은 기능을 수행한다.
       - run: npm ci
-      # --if-present 옵션은 npm 스크립트가 존재할 때만 실행시키라는 의미이다.
-      # 만약 build 스크립트가 없는 경우, 오류 없이 지나간다.
       - run: npm run build --if-present
 
       - name: Login to DockerHub
@@ -39,8 +29,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Docker build
+      - name: Docker build and push
         run: |
+          IMAGE_TAG=${GITHUB_SHA::7} # 여기서 태그를 설정합니다.
           docker build \
             --build-arg S3_KEYID="${{secrets.S3_KEYID}}" \
             --build-arg S3_PRIVATE_KEY="${{secrets.S3_PRIVATE_KEY}}" \
@@ -58,10 +49,10 @@ jobs:
             --build-arg GOOGLE_CLIENT_ID="${{secrets.GOOGLE_CLIENT_ID}}" \
             --build-arg GOOGLE_CLIENT_PASSWORD="${{secrets.GOOGLE_CLIENT_PASSWORD}}" \
             --build-arg AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE="${{secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE}}" \
-            -t ${{ secrets.PROJECT_NAME }} .
+            -t ${{ secrets.PROJECT_NAME }}:${IMAGE_TAG} .
 
-          docker tag ${{ secrets.PROJECT_NAME }} ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
-          docker push ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+          docker tag ${{ secrets.PROJECT_NAME }}:${IMAGE_TAG} ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG}
+          docker push ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG}
 
       - name: Deploy
         uses: appleboy/ssh-action@master
@@ -69,9 +60,8 @@ jobs:
           host: ${{ secrets.EC2_SERVER_HOST }}
           username: ubuntu
           key: ${{ secrets.PRIVATE_KEY }}
-          envs: GITHUB_SHA
+          envs: IMAGE_TAG
           script: |
-            # 1. EC2 인스턴스의 .bashrc에 환경변수 추가
             echo "export S3_KEYID=${{ secrets.S3_KEYID }}" >> ~/.bashrc
             echo "export S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }}" >> ~/.bashrc
             echo "export REGION=${{ secrets.REGION }}" >> ~/.bashrc
@@ -89,16 +79,14 @@ jobs:
             echo "export GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> ~/.bashrc
             echo "export GOOGLE_CLIENT_PASSWORD=${{ secrets.GOOGLE_CLIENT_PASSWORD }}" >> ~/.bashrc
             echo "export AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE=${{ secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE }}" >> ~/.bashrc
-            
-            # 적용된 환경변수 재로드
+
             source ~/.bashrc
-            
-            # 2. Docker 컨테이너 갱신 로직
-            sudo docker stop mixgolem || true
-            sudo docker rm mixgolem || true
+
+            sudo docker stop ${{ secrets.PROJECT_NAME }} || true
+            sudo docker rm ${{ secrets.PROJECT_NAME }} || true
             sudo docker rmi $(docker images -q) || true
-            sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
-            sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7} ${{ secrets.PROJECT_NAME }}
+            sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG}
+            sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG} ${{ secrets.PROJECT_NAME }}
             sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 \
               -e S3_KEYID=${{ secrets.S3_KEYID }} \
               -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
