--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -92,8 +92,10 @@ jobs:
             sudo docker stop ${{ secrets.PROJECT_NAME }} || true
             sudo docker rm ${{ secrets.PROJECT_NAME }} || true
             sudo docker rmi $(docker images -q) || true
-            sudo docker pull $DOCKER_REPO
-            sudo docker tag $DOCKER_REPO ${{ secrets.PROJECT_NAME }}
+            
+            # 정확한 이미지 이름과 태그 사용
+            sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG}
+            sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG} ${{ secrets.PROJECT_NAME }}
             sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 \
               -e S3_KEYID=${{ secrets.S3_KEYID }} \
               -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
@@ -103,13 +105,13 @@ jobs:
               -e DB_USER=${{ secrets.DB_USER }} \
               -e DB_PORT=${{ secrets.DB_PORT }} \
               -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-              -e DB_TABLE=${{ secrets.DB_TABLE}} \
-              -e EMAIL_USER=${{ secrets.EMAIL_USER}} \
-              -e EMAIL_PASS=${{ secrets.EMAIL_PASS}} \
-              -e USER_PASS_SALT=${{ secrets.USER_PASS_SALT}} \
-              -e JWT_SECRET=${{ secrets.JWT_SECRET}} \
-              -e KAKAO_REST_API_KEY=${{ secrets.KAKAO_REST_API_KEY}} \
-              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID}} \
-              -e GOOGLE_CLIENT_PASSWORD=${{ secrets.GOOGLE_CLIENT_PASSWORD}} \
-              -e AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE=${{ secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE}} \
+              -e DB_TABLE=${{ secrets.DB_TABLE }} \
+              -e EMAIL_USER=${{ secrets.EMAIL_USER }} \
+              -e EMAIL_PASS=${{ secrets.EMAIL_PASS }} \
+              -e USER_PASS_SALT=${{ secrets.USER_PASS_SALT }} \
+              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+              -e KAKAO_REST_API_KEY=${{ secrets.KAKAO_REST_API_KEY }} \
+              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
+              -e GOOGLE_CLIENT_PASSWORD=${{ secrets.GOOGLE_CLIENT_PASSWORD }} \
+              -e AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE=${{ secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE }} \
               ${{ secrets.PROJECT_NAME }}
