[ci/cd] feature/auth

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,13 +29,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Docker build and push
+      - name: Docker build
         run: |
-          # 커밋 SHA의 앞 7자리를 이용하여 유니크한 태그 생성
-          IMAGE_TAG=${GITHUB_SHA::7}
-          # 프로젝트 이름과 태그를 합쳐서 이미지 이름 생성
-          IMAGE_NAME=${{ secrets.PROJECT_NAME }}:${IMAGE_TAG}
-          DOCKER_REPO=${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG}
           
           # Docker 이미지 빌드
           docker build \
@@ -55,11 +50,11 @@ jobs:
             --build-arg GOOGLE_CLIENT_ID="${{secrets.GOOGLE_CLIENT_ID}}" \
             --build-arg GOOGLE_CLIENT_PASSWORD="${{secrets.GOOGLE_CLIENT_PASSWORD}}" \
             --build-arg AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE="${{secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE}}" \
-            -t $IMAGE_NAME .
+            -t ${{ secrets.PROJECT_NAME }} .
 
           # Docker Hub에 이미지 푸시
-          docker tag $IMAGE_NAME $DOCKER_REPO
-          docker push $DOCKER_REPO
+          docker tag ${{ secrets.PROJECT_NAME }} ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
+          docker push ${{ secrets.DOCKER_HUB_REPO }}:${GITHUB_SHA::7}
 
       - name: Deploy
         uses: appleboy/ssh-action@master
@@ -89,8 +84,8 @@ jobs:
 
             source ~/.bashrc
 
-            sudo docker stop ${{ secrets.PROJECT_NAME }} || true
-            sudo docker rm ${{ secrets.PROJECT_NAME }} || true
+            sudo docker stop mixgolem || true
+            sudo docker rm mixgolem || true
             sudo docker rmi $(docker images -q) || true
             
             # 정확한 이미지 이름과 태그 사용
