[ci/cd] feature/auth

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -89,9 +89,9 @@ jobs:
             sudo docker rmi $(docker images -q) || true
             
             # 정확한 이미지 이름과 태그 사용
-            sudo docker pull ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG}
-            sudo docker tag ${{ secrets.DOCKER_HUB_REPO }}:${IMAGE_TAG} ${{ secrets.PROJECT_NAME }}
-            sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 \
+            sudo docker pull jainefer/mixgolem:${GITHUB_SHA::7}
+            sudo docker tag jainefer/mixgolem:${GITHUB_SHA::7} mixgolem
+            sudo docker run -d --name mixgolem -p 5000:3000 \
               -e S3_KEYID=${{ secrets.S3_KEYID }} \
               -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
               -e REGION=${{ secrets.REGION }} \
@@ -109,4 +109,4 @@ jobs:
               -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
               -e GOOGLE_CLIENT_PASSWORD=${{ secrets.GOOGLE_CLIENT_PASSWORD }} \
               -e AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE=${{ secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE }} \
-              ${{ secrets.PROJECT_NAME }}
+              mixgolem
