--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -95,7 +95,9 @@ jobs:
             
             # 정확한 이미지 이름과 태그 사용
             sudo docker pull jainefer/mixgolem:${GITHUB_SHA::7}
+            echo "pull success"
             sudo docker tag jainefer/mixgolem:${GITHUB_SHA::7} mixgolem
+            echo "tag success"
             sudo docker run -d --name mixgolem -p 5000:3000 \
               -e S3_KEYID=${{ secrets.S3_KEYID }} \
               -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
@@ -115,3 +117,4 @@ jobs:
               -e GOOGLE_CLIENT_PASSWORD=${{ secrets.GOOGLE_CLIENT_PASSWORD }} \
               -e AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE=${{ secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE }} \
               mixgolem
+            echo "run success"
