--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -98,23 +98,5 @@ jobs:
             echo "pull success"
             sudo docker tag jainefer/mixgolem:${GITHUB_SHA::7} mixgolem
             echo "tag success"
-            sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 \
-              -e S3_KEYID=${{ secrets.S3_KEYID }} \
-              -e S3_PRIVATE_KEY=${{ secrets.S3_PRIVATE_KEY }} \
-              -e REGION=${{ secrets.REGION }} \
-              -e BUCKET_NAME=${{ secrets.BUCKET_NAME }} \
-              -e DB_HOST=${{ secrets.DB_HOST }} \
-              -e DB_USER=${{ secrets.DB_USER }} \
-              -e DB_PORT=${{ secrets.DB_PORT }} \
-              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-              -e DB_TABLE=${{ secrets.DB_TABLE }} \
-              -e EMAIL_USER=${{ secrets.EMAIL_USER }} \
-              -e EMAIL_PASS=${{ secrets.EMAIL_PASS }} \
-              -e USER_PASS_SALT=${{ secrets.USER_PASS_SALT }} \
-              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-              -e KAKAO_REST_API_KEY=${{ secrets.KAKAO_REST_API_KEY }} \
-              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
-              -e GOOGLE_CLIENT_PASSWORD=${{ secrets.GOOGLE_CLIENT_PASSWORD }} \
-              -e AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE=${{ secrets.AWS_SDK_JS_SUPPRESS_MAINTENANCE_MODE_MESSAGE }} \
-              ${{ secrets.PROJECT_NAME }}
+            sudo docker run -d --name ${{ secrets.PROJECT_NAME }} -p 5000:3000 ${{ secrets.PROJECT_NAME }}
             echo "run success : ${{ secrets.PROJECT_NAME }}"
